--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 cfgv==3.3.1
+cycler==0.11.0
 dataclasses==0.8
 distlib==0.3.4
 filelock==3.4.1
 identify==2.4.4
 importlib-metadata==4.8.3
 importlib-resources==5.2.3
+kiwisolver==1.3.1
+matplotlib==3.3.4
 nodeenv==1.6.0
 numpy==1.19.5
+p2j==1.3.2
 Pillow==8.4.0
 platformdirs==2.4.0
 pre-commit==2.17.0
+pyparsing==3.0.7
+python-dateutil==2.8.2
 PyYAML==6.0
 six==1.16.0
 toml==0.10.2
