--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,100 @@
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+async-generator==1.10
+attrs==22.2.0
+backcall==0.2.0
+black==22.8.0
+bleach==4.1.0
+cffi==1.15.1
 cfgv==3.3.1
+click==8.0.4
+colorama==0.4.4
+comm==0.1.4
 cycler==0.11.0
 dataclasses==0.8
+decorator==5.1.1
+defusedxml==0.7.1
 distlib==0.3.4
+entrypoints==0.4
 filelock==3.4.1
+gluonts==0.11.12
 identify==2.4.4
 importlib-metadata==4.8.3
 importlib-resources==5.2.3
+ipykernel==5.5.6
+ipython==7.16.3
+ipython-genutils==0.2.0
+ipywidgets==7.8.1
+jedi==0.17.2
+Jinja2==3.0.3
+joblib==1.1.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.3
+jupyter-core==4.9.2
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.1.7
 kiwisolver==1.3.1
+MarkupSafe==2.0.1
 matplotlib==3.3.4
+mistune==0.8.4
+mypy-extensions==0.4.3
+nbclient==0.5.9
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.5
 nodeenv==1.6.0
+notebook==6.4.10
 numpy==1.19.5
 p2j==1.3.2
+packaging==21.3
+pandas==1.1.5
+pandocfilters==1.5.1
+parso==0.7.1
+pathspec==0.9.0
+pickleshare==0.7.5
 Pillow==8.4.0
 platformdirs==2.4.0
 pre-commit==2.17.0
+prometheus-client==0.17.1
+prompt-toolkit==3.0.29
+pycparser==2.21
+pydantic==1.9.2
+Pygments==2.11.2
 pyparsing==3.0.7
+pyrsistent==0.18.0
 python-dateutil==2.8.2
+pytz==2022.1
+pywin32==303
+pywinpty==1.1.6
 PyYAML==6.0
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.1
+scikit-learn==0.24.2
+scipy==1.5.4
+seaborn==0.11.2
+Send2Trash==1.8.2
 six==1.16.0
+smart-open==6.3.0
+terminado==0.12.1
+testpath==0.6.0
+threadpoolctl==3.1.0
 toml==0.10.2
+tomli==1.2.3
+toolz==0.12.0
 torch==1.10.2
 torchaudio==0.10.2
 torchvision==0.11.3
+tornado==6.1
+tqdm==4.64.1
+traitlets==4.3.3
+typed-ast==1.5.4
 typing_extensions==4.1.1
+unidip==0.1.1
 virtualenv==20.14.0
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.6.6
 zipp==3.6.0
