--- a/requirements.txt
+++ b/requirements.txt
@@ -105,3 +105,13 @@ setuptools~=59.6.0
 patsy~=0.5.6
 tenacity~=8.2.2
 statsmodels~=0.12.2
+uvicorn~=0.16.0
+fastapi~=0.83.0
+h11~=0.13.0
+anyio~=3.6.2
+sniffio~=1.2.0
+contextvars~=2.4
+asgiref~=3.4.1
+starlette~=0.19.1
+idna~=3.10
+immutables~=0.19
